@@ -1,4 +1,11 @@
-﻿shmuel 18.06.2014 20:47:47 +0200 - build 376
+﻿shmuel 21.06.2014 18:09:57 +0200 - build 377
+
+1. LuaFAR: при создании и инициализации дополнительного lua_State, и вызове из него диалога, было падение.
+
+2. LuaFAR (generic plugin): экспортируемая функция luaopen_luaplug сделана доступной из Lua, в виде глобальной
+   переменной _luaplug. Подробнее - в мануале.
+
+shmuel 18.06.2014 20:47:47 +0200 - build 376
 
 1. Уточнение 366.
 
